chinh sua frmLogIn them event

--- a/quanLyNhaHang_Nhom4/Properties/Resources.resx
+++ b/quanLyNhaHang_Nhom4/Properties/Resources.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="checkbox-minus-solid-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\checkbox-minus-solid-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="exit-solid-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exit-solid-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo_quanAN" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_quanAN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user-regular-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-regular-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
