--- a/quanLyNhaHang_Nhom4/Manager/frmManagerFood.resx
+++ b/quanLyNhaHang_Nhom4/Manager/frmManagerFood.resx
@@ -117,17 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="lblTitle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAPBJREFUSEvtlKESwjAQBauQSCQSiUQikUgkEomsxCH5BCQSiUQi+QwkEg1vMzxX
-        AtdODdOd2ZmmXC5HcmnR0YS+3MijPMvTezySjZnJm3xW+JArWZu5dDKqXsip5P1B+rdShhlIV77mRQUu
-        gH8S3q6tZDKV5thJ4vZpFIAtYSJV5hhL4q5pFMDbw1Z9gzgMcZFM4lBzDCVx9zQK4L3lLHLQAMRRUIiJ
-        ZCIdwnMVVE/lxNHCYbitXoRe93lws7lgTk5D1KInaT+SfNJnRRexcC34XPANcsVOvJTg940WycFd6Bb5
-        GS+CPLcCiVtL/rcUxQsUfVOJoWaIKQAAAABJRU5ErkJggg==
-</value>
-  </data>
   <metadata name="dgvFoodName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -140,10 +129,23 @@
   <metadata name="dgvFoodStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dgvFoodName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgvPrice.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgvImage.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgvFoodStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnSearchFood.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAPBJREFUSEvtlKESwjAQBauQSCQSiUQikUgkEomsxCH5BCQSiUQi+QwkEg1vMzxX
+        wgAADsIBFShKgAAAAPBJREFUSEvtlKESwjAQBauQSCQSiUQikUgkEomsxCH5BCQSiUQi+QwkEg1vMzxX
         AtdODdOd2ZmmXC5HcmnR0YS+3MijPMvTezySjZnJm3xW+JArWZu5dDKqXsip5P1B+rdShhlIV77mRQUu
         gH8S3q6tZDKV5thJ4vZpFIAtYSJV5hhL4q5pFMDbw1Z9gzgMcZFM4lBzDCVx9zQK4L3lLHLQAMRRUIiJ
         ZCIdwnMVVE/lxNHCYbitXoRe93lws7lgTk5D1KInaT+SfNJnRRexcC34XPANcsVOvJTg940WycFd6Bb5
